; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/bridge/extr_br_multicast.c_br_mdb_ip_get.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/bridge/extr_br_multicast.c_br_mdb_ip_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_bridge_mdb_entry = type { i32 }
%struct.net_bridge_mdb_htable = type { i32 }
%struct.br_ip = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.net_bridge_mdb_entry* (%struct.net_bridge_mdb_htable*, %struct.br_ip*)* @br_mdb_ip_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.net_bridge_mdb_entry* @br_mdb_ip_get(%struct.net_bridge_mdb_htable* %0, %struct.br_ip* %1) #0 {
  %3 = alloca %struct.net_bridge_mdb_entry*, align 8
  %4 = alloca %struct.net_bridge_mdb_htable*, align 8
  %5 = alloca %struct.br_ip*, align 8
  store %struct.net_bridge_mdb_htable* %0, %struct.net_bridge_mdb_htable** %4, align 8
  store %struct.br_ip* %1, %struct.br_ip** %5, align 8
  %6 = load %struct.net_bridge_mdb_htable*, %struct.net_bridge_mdb_htable** %4, align 8
  %7 = icmp ne %struct.net_bridge_mdb_htable* %6, null
  br i1 %7, label %9, label %8

8:                                                ; preds = %2
  store %struct.net_bridge_mdb_entry* null, %struct.net_bridge_mdb_entry** %3, align 8
  br label %16

9:                                                ; preds = %2
  %10 = load %struct.net_bridge_mdb_htable*, %struct.net_bridge_mdb_htable** %4, align 8
  %11 = load %struct.br_ip*, %struct.br_ip** %5, align 8
  %12 = load %struct.net_bridge_mdb_htable*, %struct.net_bridge_mdb_htable** %4, align 8
  %13 = load %struct.br_ip*, %struct.br_ip** %5, align 8
  %14 = call i32 @br_ip_hash(%struct.net_bridge_mdb_htable* %12, %struct.br_ip* %13)
  %15 = call %struct.net_bridge_mdb_entry* @__br_mdb_ip_get(%struct.net_bridge_mdb_htable* %10, %struct.br_ip* %11, i32 %14)
  store %struct.net_bridge_mdb_entry* %15, %struct.net_bridge_mdb_entry** %3, align 8
  br label %16

16:                                               ; preds = %9, %8
  %17 = load %struct.net_bridge_mdb_entry*, %struct.net_bridge_mdb_entry** %3, align 8
  ret %struct.net_bridge_mdb_entry* %17
}

declare dso_local %struct.net_bridge_mdb_entry* @__br_mdb_ip_get(%struct.net_bridge_mdb_htable*, %struct.br_ip*, i32) #1

declare dso_local i32 @br_ip_hash(%struct.net_bridge_mdb_htable*, %struct.br_ip*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
